tests/tooling/fixtures/native/execution/positive/message_send_nonzero_global_identifier_post_pure_annotated_call_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierPostPureAnnotatedCallFastPathExecution;

let receiver = 7;

pure fn touch() -> i32 {
  return 0;
}

fn main() -> i32 {
  touch();
  return [receiver ping];
}
