tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_in_return_type_pure.objc3
module MisplacedQualifierInReturnTypePure;

fn add(lhs: i32, rhs: i32) -> pure;

fn main() -> i32 {
  return 0;
}
